@@ -19,6 +19,7 @@
   * Updated the SDF parser to better work with SDFs that contain custom beamforming
   * Added convenience functions to the lsl.common.mcs module to help pack delays and gains for custom beamforming SDFs
   * Updated the included LWA1 SSMIF to the March 10, 2013 version
+  * Added support for phase offsets to the lsl.sim.vis.scaleData() function
 
 0.6.2
   * Fixed a bug in splitDRX.py that caused the script to die if an --offset was passed in
